cmake_minimum_required(VERSION 3.13.4)
project(LanguageC LANGUAGES C)
add_executable(break break.c)
add_executable(comaop comaop.c)
add_executable(comatest comatest.c)
add_executable(continue continue.c)
add_executable(dowhile dowhile.c)
add_executable(dynalloc dynalloc.c)
add_executable(enum-2 enum-2.c)
add_executable(enum enum.c)
add_executable(fact fact.c)
add_executable(for for.c)
add_executable(iochar2 iochar2.c)
add_executable(iochar iochar.c)
add_executable(ioprintf ioprintf.c)
add_executable(ioscanf ioscanf.c)
add_executable(memalloca memalloca.c)
add_executable(multitab multitab.c)
add_executable(ptr1 ptr1.c)
add_executable(ptr2 ptr2.c)
add_executable(ptr3 ptr3.c)
add_executable(ptrarithm ptrarithm.c)
add_executable(ptrarithmdbl ptrarithmdbl.c)
add_executable(ptrarithmtab ptrarithmtab.c)
add_executable(relationalop relationalop.c)
add_executable(stringconcat stringconcat.c)
add_executable(stringconcat2 stringconcat2.c)
add_executable(struct struct.c)
target_link_libraries(struct "-lm")
add_executable(tab tab.c)
add_executable(tab2 tab2.c)
add_executable(tab3 tab3.c)
add_executable(tab4 tab4.c)
add_executable(tab5 tab5.c)
add_executable(tab6 tab6.c)
add_executable(testcast testcast.c)
add_executable(typecast typecast.c)
add_executable(union union.c)
add_executable(varadrval varadrval.c)
add_executable(varptr varptr.c)
add_executable(while while.c)
